# 2DGameEngine

./: .gitignore  2DGameEngine.sln  CMakeLists.txt
2DGameEngine/: 2DGameEngine.vcxproj  2DGameEngine.vcxproj.filters  Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  ColliderComponent.cpp  ColliderComponent.h  Collision.cpp  Collision.h  Component.h  ComponentManager.cpp  ComponentManager.h  Constants.h  CursorComponent.cpp  CursorComponent.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  InteractionComponent.cpp  InteractionComponent.h  InteractionManager.cpp  InteractionManager.h  KeyboardControlComponent.cpp  KeyboardControlComponent.h  LuaManager.cpp  LuaManager.h  Makefile  MouseControlComponent.cpp  MouseControlComponent.h  SpriteComponent.cpp  SpriteComponent.h  Terrain.cpp  Terrain.h  TextureManager.cpp  (+9 more)
assets/images/: Genie.aseprite  chefman.aseprite
assets/scripts/: camera.lua  config.lua.txt  cursor.lua  entities.lua  player.lua  script.lua  table.lua
